# src/routes/account.routes.js
@@ -1,12 +1,14 @@
 import express from "express";
 import {
   createAccount,
+  getAllAccounts,
   getAccount,
 } from "../controllers/account.controller.js";
 
 const router = express.Router();
 
-router.post("/", createAccount);
+router.post("/create", createAccount);
+router.get("/", getAllAccounts);
 router.get("/:id", getAccount);
 
 export default router;
